# sgb-advisor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  app.py  config.ini  dev.py  docker-compose.yaml  pyproject.toml  requirements.txt  run.sh
.github/: dependabot.yml
.github/workflows/: advise.yaml  bump-patch-version.yml  codeql.yaml  codeql.yml  create-docker-image.yaml  create-docker-image.yml  publish-pypi.yml  sgb_advisor.yaml  sgb_advisor.yml
src/sgb_advisor/: __init__.py  __main__.py  data.py  email_sender.py  logg.py  logger.py  models.py  quick_mafs.py
src/sgb_advisor/assets/: email_template.html  output.html  sample_data.json  scrips.csv  template.html
src/sgb_advisor/notify/: __init__.py  common.py  email_sender.py  teleg.py
src/sgb_fair_value_calculator/: config.py  data.py  quick_mafs.py
