[project]
name = "sgb-advisor"
version = "0.2.5"
description = "A tool to analyse Sovereign Gold Bonds and compare their yields."
readme = "README.md"
authors = [{ name = "Vishal Nandagopal", email = "dev@vishalnandagopal.com" }]
license = "GPL-3.0-only"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "python-dotenv>=1.2.1",
    "pyxirr>=0.10.8",
    "requests>=2.32.5",
    "boto3>=1.42.45",
    "playwright>=1.58.0",
]
keywords = ["sovereign-gold-bonds", "sgb", "india-finance", "finance"]

[dependency-groups]
dev = [
    "boto3-stubs>=1.42.45",
    "icecream>=2.1.10",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15",
    "ty>=0.0.15",
    "types-requests>=2.32.4.20260107",
    "uv>=0.10",
]
build = ["uv_build>=0.10"]

[project.urls]
homepage = "https://github.com/vishalnandagopal/sgb-advisor"
source = "https://github.com/vishalnandagopal/sgb-advisor.git"
documentation = "https://github.com/vishalnandagopal/sgb-advisor/blob/master/README.md#running-the-app"
issues = "https://github.com/vishalnandagopal/sgb-advisor/issues"

[project.scripts]
sgb-advisor = "sgb_advisor.__main__:main"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100

[tool.ruff.lint]
select = ["ANN"]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
required-version = ">=0.10.0"
default-groups = "all"

[tool.uv.build-backend]
source-include = [
    "src/sgb_advisor/assets/scrips.csv",
    "src/sgb_advisor/assets/template.html",
    "src/sgb_advisor/assets/telegram_template.html",
    "src/sgb_advisor/**/*.py",
]
sources-exclude = ["**.env"]
