[project]
name = "sgb-advisor"
version = "0.2.6"
description = "A tool to analyse Sovereign Gold Bonds and compare their yields."
readme = "README.md"
authors = [{ name = "Vishal Nandagopal", email = "dev@vishalnandagopal.com" }]
license = "GPL-3.0-only"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "python-dotenv>=1.2.2",
    "pyxirr>=0.10.8",
    "requests>=2.34.2",
    "boto3>=1.43.9",
    "playwright>=1.60.0",
]
keywords = ["sovereign-gold-bonds", "sgb", "india-finance", "finance"]

[dependency-groups]
dev = [
    "boto3-stubs>=1.43.9",
    "icecream>=2.2.0",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15",
    "ty>=0.0.37",
    "types-requests>=2.33.0.20260518",
    "uv>=0.11",
]
build = ["uv_build>=0.11"]

[project.urls]
homepage = "https://github.com/vishalnandagopal/sgb-advisor"
source = "https://github.com/vishalnandagopal/sgb-advisor.git"
documentation = "https://github.com/vishalnandagopal/sgb-advisor/blob/master/README.md#running-the-app"
issues = "https://github.com/vishalnandagopal/sgb-advisor/issues"

[project.scripts]
sgb-advisor = "sgb_advisor.__main__:main"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100

[tool.ruff.lint]
select = ["ANN"]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
required-version = ">=0.11.0"
default-groups = "all"

[tool.uv.build-backend]
source-include = [
    "src/sgb_advisor/assets/scrips.csv",
    "src/sgb_advisor/assets/template.html",
    "src/sgb_advisor/assets/telegram_template.html",
    "src/sgb_advisor/**/*.py",
]
sources-exclude = ["**.env"]
